# mil-pf-core

./: AGENTS.md  README.md  pyproject.toml
mil_pf_core/: __init__.py  pipeline.py
mil_pf_core/embedder/: __init__.py  config.py  factory.py  interface.py
mil_pf_core/embedder/implementations/: __init__.py
mil_pf_core/embedder/implementations/dinov2/: __init__.py  config.py  embedder.py
mil_pf_core/embedder/implementations/dummy/: __init__.py  config.py  embedder.py
mil_pf_core/embedder/implementations/medsiglip/: __init__.py  config.py  embedder.py
mil_pf_core/embedding/: __init__.py  dummy_embedding.py  interface.py
mil_pf_core/head/: __init__.py  config.py  dummy_head.py  factory.py  interface.py
mil_pf_core/head/implementations/: __init__.py
mil_pf_core/head/implementations/dummy/: __init__.py  config.py  head.py
mil_pf_core/head/implementations/mil_pf_attn/: __init__.py  config.py  head.py  model.py
mil_pf_core/head/implementations/milpf/: __init__.py  config.py  head.py  model.py
mil_pf_core/preprocessing/: __init__.py  config.py  dummy_preprocessing.py  factory.py  interface.py  utils.py
mil_pf_core/preprocessing/implementations/: __init__.py
mil_pf_core/types/: __init__.py  embeddings.py  embeddings_batch.py  images.py  images_batch.py  predictions.py  preprocessed_batch.py  preprocessed_views.py  structured_embeddings.py  view_set.py  view_set_list.py
tests/: test_dummy_pipeline.py  test_mammo_preprocessing.py  test_pipeline_shape_compatibility.py  test_real_pipeline_verbose.py
(+6 files in other folders)
