[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mil-pf-core"
version = "0.1.0"
description = "Core interfaces, types, and pipeline for MIL PF models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "torch",
    "torch-scatter",
    "opencv-python",
    "einops",
    "transformers",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mil_pf_core*"]
